third_party/rust/thiserror/v1/crate/tests/ui/transparent-display.stderr
error: cannot have both #[error(transparent)] and a display attribute
 --> tests/ui/transparent-display.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
